--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.1.2 (trunk):
+* Improve ocamldoc for exported functions.
+
 1.1.1 (15-Feb-2014):
 * Improve portability on *BSD by not including `malloc.h` and
   just using `stdlib.h` instead.
