--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-* Make Io_page.t type private.
-  Otherwise, any old array of bytes can be used as an Io_page.t.
+1.3.0 (26-Jan-2015):
+* Make `Io_page.t` type private. Otherwise, any old array of bytes
+  can be used as an `Io_page.t`. (#14)
 
 1.2.0 (21-Nov-2014):
 * Add `Io_page.get_buf` which allocates an Io_page
