--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+* Add of_cstruct_exn as a safe way to turn a cstruct back into an Io_page.t.
+
 1.3.0 (26-Jan-2015):
 * Make `Io_page.t` type private. Otherwise, any old array of bytes
   can be used as an `Io_page.t`. (#14)
