--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-* Add of_cstruct_exn as a safe way to turn a cstruct back into an Io_page.t.
-* Expose page_size constant in interface.
+1.4.0 (28-Jan-2015):
+* Add `of_cstruct_exn` as a safe way to turn a Cstruct back into an `Io_page.t`.
+* Expose `page_size` constant in interface.
 
 1.3.0 (26-Jan-2015):
 * Make `Io_page.t` type private. Otherwise, any old array of bytes
