--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.5.1 (18-Mar-2015)
+* Avoid cyclic dependency with `mirage-xen` (#21, patch from @hannesm)
+
 1.5.0 (16-Mar-2015)
 * Fix equallity of io-pages (#17, patch from @hannesm)
 * Import C stubs from mirage-platform (#18, patch from @hannesm)
