--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+1.6.0 (3-Mar-2016)
+* Add support for Win32
+
 1.5.1 (18-Mar-2015)
 * Avoid cyclic dependency with `mirage-xen` (#21, patch from @hannesm)
 
